--- a/index.html
+++ b/index.html
@@ -15,11 +15,15 @@
       <header class="title">
           <div class="container-fluid h-100 w-100">
               <div class="row h-100 justify-content:center align-items-center">
-                  <div class="col-12">
+                  <div class="col">
                     <div class="text">
                       <h1>歡迎來到Tsz的展示空間</h1>
-                      <p>Welcome to the exhibition space of Tsz</p>
-                  </div>
+                      <p>Welcome to the exhibition space of Tsz</p>    
+                      <div class="img">
+                        <img class="w-100"src="/image/totem-1.png" alt="">
+                      </div>                                  
+                    </div>
+                    
                 </div>                 
             </div>
           </div>
@@ -43,6 +47,12 @@
                 <li class="nav-item">
                   <a class="nav-link" href="#">Link</a>
                 </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#"data-bs-toggle="modal" data-bs-target="#exampleModal">註冊/登入</a>
+                </li>
               </ul>
               <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -52,45 +62,65 @@
           </div>
         </nav>
       </div>
+      <!-- modal功能 -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h3 class="modal-title" id="exampleModalLabel">登入/註冊</h3>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
       <!-- 輪播照片區 -->
-      <div class="container-fluid w-75 mt-5">
-        <div class="row">
-          <div class="col">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <div class="pic">
+        <div class="container-fluid w-75 pt-5 pb-5">
+          <div class="row">
+            <div class="col">
+              <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="/image/image-1.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/image/image-2.png" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="/image/image-3.png" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img src="/image/image-1.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/image/image-2.png" class="d-block w-100" alt="...">
-                </div>
-                <div class="carousel-item">
-                  <img src="/image/image-3.png" class="d-block w-100" alt="...">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
           </div>
         </div>
       </div>
       <!-- 作品展示區 -->
-      <div class="container-fluid">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-6 m-5">
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+      <div class="container-fluid w-75">
+        <div class="row row-cols-1 row-cols-md-2 justify-content-around mt-3">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/tank-1.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -98,9 +128,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/tank-2.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -108,9 +138,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/tank-3.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -118,9 +148,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/tank-4.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -128,9 +158,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/124.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -138,9 +168,9 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="...">
+          <div class="col mt-2">
+            <div class="card h-100">
+              <img src="/image/156146.png" class="card-img-top w-100" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -151,7 +181,7 @@
         </div>
       </div>
       <footer>
-        <div class="container h-100">
+        <div class="container-fluid h-100 mt-5">
           <div class="row h-100 justify-content-center align-items-center">
             <div class="col">
               <div class="text">
