--- a/product.html
+++ b/product.html
@@ -12,7 +12,83 @@
     <link rel="stylesheet" href="./style/style.css">
   </head>
   <body>
-      <img src="https://picsum.photos/id/684/600/400" alt="">
+    <button class="btn btn-primary">bnt</button>
+    <button class="btn-annie">bnt</button>
+      <div class="container w-75">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://picsum.photos/id/684/600/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://picsum.photos/id/685/600/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://picsum.photos/id/686/600/400" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://picsum.photos/id/687/600/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://picsum.photos/id/688/600/400" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://picsum.photos/id/695/600/400" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row row-cols-md-4 justify-content-center">
+          <div class="col">
+            <div class="fish mt-5">
+              <img class="img-fluid"src="https://picsum.photos/id/684/300/200" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="fish mt-5">
+              <img class="img-fluid"src="https://picsum.photos/id/684/300/200" alt="">
+            </div>
+          </div>
+          <div class="col">
+            <div class="fish mt-5">
+              <img class="img-fluid"src="https://picsum.photos/id/684/300/200" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
     
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
