//修正Header背景圖片

--- a/index.html
+++ b/index.html
@@ -14,16 +14,12 @@
   <body>
       <header class="title">
           <div class="container-fluid h-100 w-100">
-              <div class="row h-100 justify-content:center align-items-center">
+              <div class="row h-100 justify-content:center align-items-center bgimg">
                   <div class="col">
                     <div class="text">
                       <h1>歡迎來到Tsz的展示空間</h1>
                       <p>Welcome to the exhibition space of Tsz</p>    
-                      <div class="img">
-                        <img class="w-100"src="/image/totem-1.png" alt="">
-                      </div>                                  
                     </div>
-                    
                 </div>                 
             </div>
           </div>
